--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -11,40 +11,47 @@ bibliography: references.bib
 
 # Overview
 
-This page provides an overview of 'how-to' incorporate connectivity into Marxan [@Ball2009-cp], some instructions for using Marxan Connect combined with example of workflows using both demographic and landscape connectivity data.
+This page provides an overview of 'how-to' incorporate connectivity into Marxan [@Ball2009-cp], some instructions for using Marxan Connect combined with example workflows using both demographic and landscape connectivity data.  These instructions assume you have already installed Marxan Connect, but if not, instructions can be found [here](index.html#installing)
 
-The maps and plots shown in this tutorial were created in R using the shapefile exported from the "Plotting Options" tab of Marxan Connect. The R code used to make the plots can be revealed by clicking on the `Code` button below 
+The maps and plots shown in this tutorial were created in R using the shapefile exported from the "Plotting Options" tab of Marxan Connect. The R code used to make the plots can be revealed by clicking on the `Code` button below
 
 ```{r load packages,message=FALSE, warning=FALSE}
+
 library(sf)
+
 library(leaflet)
+
 library(tmap)
+
 library(tidyverse)
+
 library(DT)
 
-
 # set default projection for leaflet
+
 proj <- "+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext  +no_defs"
+
 ```
 
 # Introduction to Marxan Connect
 
-Because we recognize that there is considerable investment in Marxan-based prioritization, Marxan Connect was designed to help conservation practitioners incorporate connectivity into existing Marxan analyses. It acts as a preprocessing module to prepare connectivity data for inclusion in a Marxan analysis (Figure 1)
+Because we recognize that there is considerable investment in Marxan-based prioritization, Marxan Connect was designed to help conservation practitioners incorporate connectivity into existing Marxan analyses. It acts as a preprocessing module to prepare connectivity data for inclusion in a Marxan analysis (Figure 1).
 
 ![**Figure 1:** *Comparison of workflows between Marxan and "Marxan Connect." Marxan Connect facilitates the use of connectivity data, derived from tagging data, genetics, dispersal models, resistance models, or geographic distance, by producing connectivity metrics and connectivity strengths (i.e. spatial dependencies) to be used as boundary definitions before running Marxan. These connectivity metrics and linkage strengths are then used as input (conservation features and/or boundary definitions) in the traditional Marxan workflow. The cost data in the traditional Marxan analysis refers to the cost of protecting a planning unit (i.e. opportunity cost), not the cost to traverse a landscape.*\label{workflow}](images/workflow.png)
 
 Marxan Connect allows users to export data products (*e.g.* connectivity metrics, marxan files, etc) at any of the above steps to enable users to base their workflow in or outside Marxan Connect.
 
-The workflow is divided into seperate tabs which represent steps in the analysis.
+The workflow is divided into seprate tabs at represent steps in the analysis.
 
+![**Figure 2:** *Tabs within Marxan Connect that represent steps in the workflow.*\label{workflow}](images/Fig2_workflow_tabs.png)
 
 ## Spatial Input
 
-This tab allows users to identify and load their [planning units](./glossary.html#planning_units), and optionally a [focus area](./glossary.html#focus_areas) or [avoidance areas](./glossary.html#avoidance_areas).
+This tab allows users to identify and load their [planning units](./glossary.html#planning_units), and optionally [focus areas](./glossary.html#focus_areas) or [avoidance areas](./glossary.html#avoidance_areas).
 
 ## Connectivity Input
 
-This tab allows users to input their demographic or landscape-based connectivity data. It also allows users to generate some landscape-based data or rescale demographic-based data. However, rescaling connectivity data can be probelmatic and it is preferable to collect or generate the connectivity data to the scale of the [planning units](./glossary.html#planning_units).
+This tab allows users to input their demographic or landscape-based connectivity data. It also allows users to generate some landscape-based data or rescale demographic-based data. However, rescaling connectivity data can be problematic and it is preferable to collect or generate the connectivity data to the scale of the [planning units](./glossary.html#planning_units).
 
 For the landscape connectivity approach, Marxan Connect calculates connectivity metrics from networks based either on Euclidean distance or least-cost path between the centroid of planning units. However, other software packages such as [Circuitscape](http://www.circuitscape.org/) [@McRae2009-aq] and [Conefor](http://www.conefor.org/) [@Saura2009-sa] currently provide a richer set of options and specialized  methods. These software packages can be used to generate custom conservation features or connectivity matrices both of which can then be used in Marxan Connect. For example, one could generate a network using current density using Circuitscape and input the resulting connectivity matrix into Marxan Connect to generate conservation features or spatial dependencies.
 
@@ -64,24 +71,21 @@ This tab allows users to operate Marxan from Marxan Connect.
 
 This tab allows users to plot connectivity metrics and Marxan results. It also allows the users to export maps and shapefiles that contain those connectivity metrics and Marxan results.
 
-# Using connectivity data as a 'feature'
+# Integrating connectivity data into spatial prioritization
 
-A simple and accessible way to integrate connectivity data into spatial prioritization is to treat it as a conservation feature, such that ${r_{ij}}$ is the amount of connectivity feature ${j}$ (*e.g.* reproductive outflux) in planning unit ${i}$.  In the classical minimum set problem (*i.e.* Marxan), a target is set for each feature, ${T_j}$, (*e.g.* 50%) and the reserve system needs to contain at least that amount.  This can incorporate continuous or discrete conservation features (Figure 2). Examples of conservation targets best represented as continuous data include patch-level self-recruitment values (range between 0 and 1) or centrality measures [@DAloia2017-jp; @Magris2018-yb; @White2014-sk]. In this treatment, a metric that represents the process of connectivity across the entire planning area receives a target.  Definitions and potential conservation objectives for each connectivity based conservation feature available in Marxan Connect can be found on in the [glossary](./glossary.html).
- 
-To increase the probability that the connectivity process is maintained, and that the spatial conservation plan is influenced by the conservation feature, a target higher than that of most other conservation features should be set. We suggest using a tunable ’constraint’, a target multiplier (${C}$), as a way to determine the higher target for connectivity-based conservation features (Figure 2). The target for the connectivity-based conservation feature, ${T_c}$, would then be:
-$${T_c=T_j*C}$$
-with ${T_j}$ being a typical conservation target for features not related to connectivity. An appropriate value for ${C}$ can be determined by using a cost trade-off curve, similar to calibrating the Boundary Length Modifier (BLM), where one would test the sensitivity of cost of the best solution and the total summed metric. It is worth noting that the BLM may interact with ${C}$. The value of ${C}$ could be chosen as the divergent point, where the greatest increase in the connectivity metric is achieved for a relatively small increase in cost. However, the preferred approach would be to establish conservation targets which lead to a reserve network design which meets ecologically relevant conservation objective(s) such as population viability or a within network metapopulation growth rate > 1 (See "Post-hoc evaluation" section for more details). 
+## Using connectivity data as a 'feature'
 
-In contrast, conservation targets set for discretized connectivity conservation features ${X_j}$ can capture different levels of importance to connectivity amongst sites [@Alvarez-Romero2018-uc] (Figure 2). To create a discrete feature, threshold value(s) must be chosen from the range of the continuous connectivity metric, ideally after ecological assessment or sensitivity analysis. The planning units that meet the threshold(s) are then discretized into unique features for which a target is set (Fig 2). Similarly, this type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) used for a particular species (*e.g.*, @Minor2008-js). When appropriate, discrete and very high priority planning units could alternately be "locked-in"" to the final solution to guarantee their inclusion.
+A simple and accessible way to integrate connectivity data into spatial prioritization is to treat it as a conservation feature [@DAloia2017-jp; @Magris2018-yb; @White2014-sk]. These connectivity-based conservation features are obtained by calculating connectivity metric(s) which represent connectivity process(es)  (*e.g.* Betweenness centrality), and then threshold value(s) must be chosen from the range of this metric, ideally after ecological assessment or sensitivity analysis. The planning units that meet the threshold(s) are then discretized into unique features (*i.e.* priority areas) for which a target ${T_j}$ is set (Figure 3). In the classical minimum set problem (*i.e.* Marxan), a target is set for each feature, ${T_j}$, (*e.g.* 50% of feature ${j}$) and the reserve system needs to contain at least that amount. The amount of connectivity-based conservation feature ${j}$ in planning unit ${i}$ (*i.e.* ${r_{ij}}$) is binary and is determined by whether the connectivity metric is above the threshold. Similarly, this type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) used for a particular species (*e.g.*, @Minor2008-js). When appropriate, discrete and very high priority planning units could alternately be "locked-in" to the final solution to guarantee their inclusion. Definitions and potential conservation objectives for each connectivity based conservation feature available in Marxan Connect can be found on in the [glossary](./glossary.html).
 
-![**Figure 2:** *Data processing workflow for three possible workflows for using raw connectivity data in spatial prioritization: 1) Connectivity as Spatial Dependency in the objective function (Raw Data -> Connectivity Matrix -> Connectivity as Spatial Dependency), 2) Continuous conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Target Setting), or 3) Discrete conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Threshold Setting -> Discrete Metrics. Coloured Arrows indicate important decision points. Red arrows indicate the conservation feature vs connectivity strength method decision point and yellow arrows indicate the continuous vs discrete conservation feature decision point.* \label{general_workflow}](images/general_workflow.png)
+In the absence of ecologically pre-determined thresholds, an appropriate value for the thresholds and ${T_j}$ can be determined by using a cost trade-off curve, similar to calibrating the Boundary Length Modifier (BLM), where one would test the sensitivity of cost of the best solution and the total summed metric. It is worth noting that the BLM may interact with the thresholds and ${T_j}$. The value of the thresholds and ${T_j}$ could be chosen as the divergent point, where the greatest increase in the connectivity metric is achieved for a relatively small increase in cost. However, the preferred approach would be to establish conservation targets which lead to a reserve network design which meets ecologically relevant conservation objective(s) such as population viability or a within network metapopulation growth rate > 1 (See "Post-hoc evaluation" section for more details).
 
-# Connectivity as spatial dependencies in the objective function
+![**Figure 3:** *Data processing workflow for three possible workflows for using raw connectivity data in spatial prioritization: 1) Connectivity as Spatial Dependency in the objective function (Raw Data -> Connectivity Matrix -> Connectivity as Spatial Dependency), 2) Continuous conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Target Setting), or 3) Discrete conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Threshold Setting -> Discrete Metrics. Coloured Arrows indicate important decision points. Red arrows indicate the conservation feature vs connectivity strength method decision point and yellow arrows indicate the continuous vs discrete conservation feature decision point.* \label{general_workflow}](images/general_workflow_new.png)
 
-Another approach to incorporate connectivity in Marxan is using the directional connectivity-based data to inform the boundary cost ${cv_{ih}}$. This cost signifies the penalty associated with protecting one site but not its well-connected partner site [@Beger2010-ir]. Here, a directional connectivity data is used to parameterize the boundary cost between all pairs of planning units and set the importance of incorporating connectivity with the Boundary Length Modifier (BLM), also called  "Connectivity Strength Modifier" (CSM) [@Beger2010-ir]. Increasing the BLM reduces the edge to area ratio by minimizing costs associated with unprotected boundaries; similarly, increasing the CSM will reduce the "leakiness" of the network (i.e. amount lost from the network) by minimizing costs associated with unprotected connectivity linkages, and thus maximising connectivity strengths across the entire Marxan solution. 
+## Connectivity as spatial dependencies in the objective function
+
+Another approach to incorporate connectivity in Marxan is using the directional connectivity-based data to inform the boundary cost ${cv_{ih}}$. This cost signifies the penalty associated with protecting one site but not its well-connected partner site [@Beger2010-ir]. Here, a directional connectivity data is used to parameterize the boundary cost between all pairs of planning units and set the importance of incorporating connectivity with the Boundary Length Modifier (BLM), also called  "Connectivity Strength Modifier" (CSM) [@Beger2010-ir]. Increasing the BLM reduces the edge to area ratio by minimizing costs associated with unprotected boundaries; similarly, increasing the CSM will reduce the "leakiness" of the network (i.e. amount lost from the network) by minimizing costs associated with unprotected connectivity linkages, and thus maximising connectivity strengths across the entire Marxan solution.
 
 The approach of using connectivity estimates as spatial dependencies in the objective function has been used to design MPAs in the Coral Triangle [@Beger2010-ir; @Beger2015-zo]. This approach can maximize the within-network connectivity, and may improve the metapopulation growth rate and other performance metrics. In Marxan Connect, one can combine the use of connectivity as spatial dependencies with a locked-in "Focus Area" (*e.g.* an existing protected area) to generate candidate stepping stones. However, it should be noted that the method will likely triage isolated sites out of the final solution unless these are included using other methods (*e.g.* a conservation feature for an isolated site which happens to contain a unique species).
-
 
 # Project Files
 
@@ -96,9 +100,13 @@ This python module, [`marxanconpy`](https://github.com/remi-daigle/MarxanConnect
 We've provided a limited set of workflow examples designed to demonstrate some of Marxan Connect's capabilities. These examples are for demonstration purposes and do not constitute planning advice.
 
 - [Using the conservation features approach using demographic-based data](./CF_demographic.html)
+
 - [Using the conservation features approach using landscape-based data](./CF_landscape.html)
+
 - [Using the spatial dependencies approach using demographic-based data](./CSD_demographic.html)
+
 - [Using the spatial dependencies approach using landscape-based data](./CSD_landscape.html)
+
 - [Setting targets and post-hoc evaluation](./targets.html)
 
 # References
